# nanogpt-experiments

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backups/20260715-200610/: VALIDATION.md  pyproject.toml
backups/20260715-200610/scripts/: analyze_five_seeds.sh  download_data.sh  run_five_seeds.sh  run_full_experiment.sh
backups/20260715-200610/src/wwgpt/: analysis.py  config.py  data.py  train.py
backups/20260715-200610/tests/: test_core.py
configs/: ablation_legacy_manual_lr.yaml  default.yaml  reproduction_fineweb.yaml  reproduction_tiny.yaml
docs/: ADAPTIVE_WWPGD_DESIGN.md  DEVICE_AND_COLAB_SUPPORT.md  EXPERIMENT_RESUME_PROTOCOL.md  LEGACY_RESULT_INVALIDATION.md  LEVEL0_WWPGD_0P5_FROM_SCRATCH.md  METHODOLOGY.md  PUBLICATION_FIGURE_PROTOCOL.md  REPRODUCIBILITY_REPORT.md  RESULT_SCHEMA.md  SCHEMA_V3.md  SCIENTIFIC_INTEGRITY_POLICY.md  STRENGTH_SCAN_DATA_INTEGRITY.md  STRENGTH_SCAN_PROTOCOL.md
examples/: local_text.txt
notebooks/: 00_colab_setup.ipynb  01_validate_repository.ipynb  02_compare_single_level.ipynb  03_weightwatcher_analysis.ipynb  04_scaling_laws.ipynb  05_overfitting_and_generalization.ipynb  06_summary_report.ipynb  07_strength_scan_overview.ipynb  08_strength_scan_weightwatcher.ipynb  09_experiment_reproducibility_report.ipynb
scripts/: analyze_five_seeds.sh  analyze_scaling_grid.sh  download_data.sh  open_notebooks.sh  run_experiment_colab.sh  run_five_seeds.sh  run_full_experiment.sh  run_level0_wwpgd_0p5_from_scratch.sh  run_one_pair.sh  run_scaling_grid.sh  run_smoke_test.sh  run_strength_scan.sh  setup_environment.sh
src/nanogpt_wwpgd_scaling.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/wwgpt/: analysis.py  checkpointing.py  cli.py  config.py  data.py  device.py  integrity.py  model.py  optim.py  publication_plots.py  reproducibility.py  scaling.py  strength_scan.py  strength_scan_analysis.py  train.py  utils.py  ww.py
tests/: conftest.py  test_accelerator_device.py  test_analysis_helpers.py  test_analysis_statistics.py  test_canonical_trials.py  test_cli_execution_interface.py  test_config_profiles.py  test_config_validation_pass1.py  test_core.py  test_critical_fixes.py  test_data_source_reproducibility.py  test_external_wwpgd_pass3.py  test_integrity_publication_grade.py  test_lr_scheduler_policy.py  test_memmap_data.py  test_nanogpt_baseline.py  test_notebooks_synthetic.py  test_optim_pass2.py  test_optimizer_step_resolution.py  test_pass5_dataset_e2e.py  test_pass6_resume_analysis_cli_ci.py  test_publication_plots.py  test_scaling_accounting.py  test_schema_v2_analysis.py  test_schema_v3.py  test_strength_scan.py  test_trial_integrity.py  test_weightwatcher_diagnostics.py  test_weightwatcher_notebook.py  test_wwpgd_interval_config.py  test_wwpgd_training_cadence.py
tests/fixtures/schema_v2_results/experiments/level_00/multiplier_20/pair_104729_20260715/adamw/run_20260715-104729_adamw/: manifest.json
tests/fixtures/schema_v2_results/experiments/level_00/multiplier_20/pair_104729_20260715/adamw_wwpgd_reference/run_20260715-104729_adamw_wwpgd_reference/: manifest.json
tests/fixtures/schema_v2_results/experiments/level_00/multiplier_20/pair_1337_20260715/adamw/run_20260715-1337_adamw/: manifest.json  spectral.csv
tests/fixtures/schema_v2_results/experiments/level_00/multiplier_20/pair_1337_20260715/adamw_wwpgd_reference/run_20260715-1337_adamw_wwpgd_reference/: manifest.json  metrics.csv  spectral.csv  wwpgd_projection.csv
tests/fixtures/schema_v2_results/experiments/level_00/multiplier_20/pair_1337_older_duplicate/adamw/run_20260715-1337_adamw/: manifest.json  metrics.csv
tests/fixtures/strength_scan/: latest_scan_root.txt
tests/fixtures/strength_scan/experiments/strength_scan/level_00/multiplier_1/scan_20260717-174036_20260717-174036_1d6b809a/: scan_manifest.json  scan_status.json
wwgpt/: __init__.py
(+24 files in other folders)
