[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanogpt-wwpgd-scaling"
version = "0.1.0"
description = "Append-only nanoGPT AdamW vs WW-PGD scaling experiments"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = {text = "MIT"}
dependencies = ["numpy", "pandas", "matplotlib", "PyYAML", "torch", "datasets", "tokenizers", "jupyterlab", "nbformat", "scipy", "weightwatcher", "torch-optimi", "tiktoken", "ww-pgd @ git+https://github.com/CalculatedContent/WW_PGD.git@bf970cb6b73e977f8374114c442ae5b0589eccaa"]

[project.scripts]
wwgpt = "wwgpt.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "E701", "E702", "E703", "F401", "I001", "E401", "E731", "F841", "F811", "B009", "B905"]

[tool.pytest.ini_options]
pythonpath = ["src"]
norecursedirs = ["backups"]
markers = [
    "unit: fast isolated tests for pure functions and local objects",
    "integration: tests crossing module, CLI, optimizer, data, or artifact boundaries",
    "accelerator: tests for accelerator selection or optional hardware behavior",
    "notebook: notebook parsing or execution tests",
    "slow: long-running/full-notebook tests excluded from normal CI",
    "hardware: smoke tests requiring optional accelerator hardware",
    "cuda: tests requiring CUDA hardware",
    "mps: tests requiring Apple MPS hardware",
    "xla: tests requiring torch_xla and an XLA device",
]

[tool.ruff.lint.per-file-ignores]
"src/wwgpt/analysis.py" = ["E401", "UP035", "B007", "B905", "SIM102", "F811"]
"src/wwgpt/strength_scan.py" = ["E401"]
"src/wwgpt/strength_scan_analysis.py" = ["E401"]
"tests/test_schema_v2_analysis.py" = ["F403", "F405", "E401"]
"tests/test_strength_scan.py" = ["E401"]
